@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-05-13T16:11:57Z",
-  "count" : 10,
-  "count_minmax" : [ 10, 10 ],
-  "count_decinc" : [ -0, +10 ],
-  "uniques" : 8,
-  "uniques_minmax" : [ 8, 8 ],
-  "uniques_decinc" : [ -0, +8 ]
+  "timestamp" : "2024-05-14T00:40:00Z",
+  "count" : 12,
+  "count_minmax" : [ 10, 12 ],
+  "count_decinc" : [ -0, +12 ],
+  "uniques" : 10,
+  "uniques_minmax" : [ 8, 10 ],
+  "uniques_decinc" : [ -0, +10 ]
 }
