@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-05-13T16:11:57Z",
+  "timestamp" : "2024-05-14T00:40:00Z",
   "count_outdated" : 7595,
   "uniques_outdated" : 3278,
-  "count" : 7695,
-  "uniques" : 3348,
+  "count" : 7697,
+  "uniques" : 3350,
   "clones" : [
     {
       "timestamp": "2024-04-30T00:00:00Z",
@@ -70,12 +70,12 @@
     },
     {
       "timestamp": "2024-05-13T00:00:00Z",
-      "count": 10,
-      "count_minmax": [ 10, 10 ],
-      "count_decinc": [ 0, 10 ],
-      "uniques": 8,
-      "uniques_minmax": [ 8, 8 ],
-      "uniques_decinc": [ 0, 8 ]
+      "count": 12,
+      "count_minmax": [ 10, 12 ],
+      "count_decinc": [ 0, 12 ],
+      "uniques": 10,
+      "uniques_minmax": [ 8, 10 ],
+      "uniques_decinc": [ 0, 10 ]
     }
   ]
 }
