@@ -1,6 +1,6 @@
 {
-  "count": 100,
-  "uniques": 60,
+  "count": 102,
+  "uniques": 62,
   "clones": [
     {
       "timestamp": "2024-04-30T00:00:00Z",
@@ -39,8 +39,8 @@
     },
     {
       "timestamp": "2024-05-13T00:00:00Z",
-      "count": 10,
-      "uniques": 8
+      "count": 12,
+      "uniques": 10
     }
   ]
 }
